feat: Enhance ProjectList and SkillItem components with accessibility improvements and additional props
- Updated ProjectList component to include ARIA roles and labels for better accessibility.
- Refactored SkillItem component to use semantic HTML elements and improved accessibility attributes.
- Added new properties to project data structure for enhanced project descriptions and metrics.
- Introduced new constants for primary email, location, and college in the configuration file.
- Updated strings constants to include primary phone number and modified short name.
- Added new SVG icon and web manifest for improved branding and PWA support.
- Implemented Open Graph and Twitter card images for better social media sharing.
- Created dynamic sitemap and robots.txt for SEO optimization.
- Developed detailed project pages with structured data for enhanced search visibility.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.14.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.4",
     "postcss": "^8.4.38",
     "postcss-nesting": "^12.1.5",
     "sass": "^1.77.6",
