--- a/.env.sample
+++ b/.env.sample
@@ -20,3 +20,15 @@ NEXT_PUBLIC_VERCEL_TOKEN=your-vercel-token # Vercel token for deploying and mana
 
 # Resume Link
 NEXT_PUBLIC_RESUME_LINK=your-resume-link # Link to the resume to be displayed on the portfolio website
+
+# Public Site URL
+NEXT_PUBLIC_SITE_URL=https://shivanshu.site # Canonical URL for the portfolio used in SEO metadata
+
+# Primary Email
+NEXT_PUBLIC_PRIMARY_EMAIL=v2.shivanshu@gmail.com # Public email address exposed in structured data
+
+# Primary Location
+NEXT_PUBLIC_PRIMARY_LOCATION=Jodhpur, Rajasthan, India # Primary location for structured data
+
+# Primary College / Institution
+NEXT_PUBLIC_PRIMARY_COLLEGE=Indian Institute of Technology (IIT) Jodhpur # Education reference for structured data and SEO
